--- a/thesis.tex
+++ b/thesis.tex
@@ -93,7 +93,7 @@
 \sec Invariance of the regularity vector
 \input invariance-of-the-regularity-vector
 
-\sec Numerical examples
+\sec[numericalsec] Numerical examples
 \input numerical-examples
 
 \chap Dealing with discontinuities
