--- a/thesis.tex
+++ b/thesis.tex
@@ -11,7 +11,7 @@
 \fontfam[EBGaramond]
 \fontfam[TypewriterMT]
 \BaskervilleMT
-\typosize[12.2/14.42]
+\typosize[12.2/14.5]
 \load[patches, garamond-math-fix, micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
@@ -29,7 +29,7 @@
 
 \parindent 1em
 \iindent=\parindent \ttindent=\parindent
-\parskip 1.5ex
+\parskip 1.7ex plus .05ex minus .08ex
 \rulewidth 0.13ex
 
 \picdir={pic/}
